fix: display menu pictures on mobile

--- a/assets/sass/menuPage.scss
+++ b/assets/sass/menuPage.scss
@@ -104,7 +104,18 @@
     margin: 0 15px;
     > div {
       display: flex;
+      flex-direction: column;
+      align-items: center;
       width: 100%;
+      margin-top: 10px;
+    }
+
+    .picturesContainer > div {
+      margin: 10px;
+    }
+
+    .pictureContainer div {
+      margin-top: 10px;
     }
 
     h2 {
